--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html >
-<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="ru" xml:lang="ru" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel=»icon» href=»/favicon.ico» type=»image/x-icon» />
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<meta charset="utf-8">
 <title>CityLine</title>
 <meta name="description" content="My Store" />
 <link rel="stylesheet" type="text/css" href="stylesheet/960.css" media="all" />
@@ -12,9 +13,7 @@
 <!--[if lt IE 9]>
 <link rel="stylesheet" type="text/css" href="stylesheet/ie.css" media="screen" />
 <![endif]-->
-
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/shoppica.js"></script>
 
 
